  fixing a problem with GMail (Dr. Gary E. Rafe).
* A null pointer dereference that lead to a segmentation fault when
  the user hit return at a yes/no question has been fixed (patch by
  Martin Neitzel).
* If no proper boundary is present in a MIME multipart message, print
  a notification message since otherwise no content is shown at all
  (problem reported by Thomas Wolff).
* Build without socket support again (patch by Andreas Niederl).
* Fixed a single quote in "makeconfig" that could cause a problem with
  the C preprocessor (patch by Martin Neitzel).
* Building with recent versions of Mozilla NSS is now possible.

[12.2] released 1/7/07
* When a MIME message part is not of the "text/" content type, always
  send it in base64 to avoid issues with CRLF conversion (David Ronis).
* Character set conversion is now also applied to attachments if they
  have the "text/" content type. This is necessary because with the
  "sendcharsets" variable, the character set declaration that becomes
  effective in the message part is otherwise unpredictable.
* Character set conversion is now only applied to message parts that
  have the "text/" content type. Previously, a message part that did
  not contain any control characters but was not of type "text/" was
  converted.
* When message file names in a maildir folder do not contain the ":2,"
  preceding the flags part, append one (Brandon Andrews).
* An invalid memory access when determining the current message in
  threaded mode has been fixed (MJ Ray).
* A "STRIP" makefile variable has been introduced to control the strip
  command at "make install".
* The "remove" command no longer causes a core dump because of a null
  pointer dereference when it is given a name with invalid shell syntax.
* Made it compile on UnixWare again (patch by Joe Julian).
* Fixes to build with more recent versions of Mozilla NSS.

[12.1] released 6/15/06
* The base64 encoder also used an invalid encoding for the last unit of